[tool.poetry]
name = "botw"
version = "0.1.0"
description = ""
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
black = "^23.7"
pre-commit = "^3.3.3"
flake8 = "^4.0.1"
pyupgrade = "^2.31.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
